tests/baselines/reference/mappedTypeIndexedAccess.errors.txt
tests/cases/compiler/mappedTypeIndexedAccess.ts(18,5): error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; } | { key: "bar"; value: number; }'.
  Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; }'.
    Types of property 'value' are incompatible.
      Type 'number' is not assignable to type 'string'.
tests/cases/compiler/mappedTypeIndexedAccess.ts(24,5): error TS2322: Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; } | { key: "bar"; value: number; }'.
  Type '{ key: "foo"; value: number; }' is not assignable to type '{ key: "foo"; value: string; }'.
    Types of property 'value' are incompatible.
      Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/mappedTypeIndexedAccess.ts (2 errors) ====
    // Repro from #15756
    
    type Pairs<T> = {
        [TKey in keyof T]: {
            key: TKey;
            value: T[TKey];
        };
    };
    
    type Pair<T> = Pairs<T>[keyof T];
    
    type FooBar = {
        foo: string;
        bar: number;
    };
    
    // Error expected here
    let pair1: Pair<FooBar> = {
        ~~~~~
!!! error TS2322: Type '{ {|key|0|}: "foo"; {|value|1|}: number; }' is not assignable to type '{ {|key|2|}: "foo"; {|value|3|}: string; } | { {|key|4|}: "bar"; {|value|5|}: number; }'.
!!! error TS2322:   Type '{ {|key|6|}: "foo"; {|value|7|}: number; }' is not assignable to type '{ {|key|8|}: "foo"; {|value|9|}: string; }'.
!!! error TS2322:     Types of property 'value' are incompatible.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/mappedTypeIndexedAccess.ts:19:5
!!! annotated symbol 1 tests/cases/compiler/mappedTypeIndexedAccess.ts:20:5
!!! annotated symbol 2 tests/cases/compiler/mappedTypeIndexedAccess.ts:5:9
!!! annotated symbol 3 tests/cases/compiler/mappedTypeIndexedAccess.ts:6:9
!!! annotated symbol 4 tests/cases/compiler/mappedTypeIndexedAccess.ts:5:9
!!! annotated symbol 5 tests/cases/compiler/mappedTypeIndexedAccess.ts:6:9
!!! annotated symbol 6 tests/cases/compiler/mappedTypeIndexedAccess.ts:19:5
!!! annotated symbol 7 tests/cases/compiler/mappedTypeIndexedAccess.ts:20:5
!!! annotated symbol 8 tests/cases/compiler/mappedTypeIndexedAccess.ts:5:9
!!! annotated symbol 9 tests/cases/compiler/mappedTypeIndexedAccess.ts:6:9
        key: "foo",
        value: 3
    };
    
    // Error expected here
    let pair2: Pairs<FooBar>[keyof FooBar] = {
        ~~~~~
!!! error TS2322: Type '{ {|key|0|}: "foo"; {|value|1|}: number; }' is not assignable to type '{ {|key|2|}: "foo"; {|value|3|}: string; } | { {|key|4|}: "bar"; {|value|5|}: number; }'.
!!! error TS2322:   Type '{ {|key|6|}: "foo"; {|value|7|}: number; }' is not assignable to type '{ {|key|8|}: "foo"; {|value|9|}: string; }'.
!!! error TS2322:     Types of property 'value' are incompatible.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
!!! annotated symbol 0 tests/cases/compiler/mappedTypeIndexedAccess.ts:25:5
!!! annotated symbol 1 tests/cases/compiler/mappedTypeIndexedAccess.ts:26:5
!!! annotated symbol 2 tests/cases/compiler/mappedTypeIndexedAccess.ts:5:9
!!! annotated symbol 3 tests/cases/compiler/mappedTypeIndexedAccess.ts:6:9
!!! annotated symbol 4 tests/cases/compiler/mappedTypeIndexedAccess.ts:5:9
!!! annotated symbol 5 tests/cases/compiler/mappedTypeIndexedAccess.ts:6:9
!!! annotated symbol 6 tests/cases/compiler/mappedTypeIndexedAccess.ts:25:5
!!! annotated symbol 7 tests/cases/compiler/mappedTypeIndexedAccess.ts:26:5
!!! annotated symbol 8 tests/cases/compiler/mappedTypeIndexedAccess.ts:5:9
!!! annotated symbol 9 tests/cases/compiler/mappedTypeIndexedAccess.ts:6:9
        key: "foo",
        value: 3
    };
    